--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         body{
             height: 100px;
+            width: 200px;
+            background-color: aquamarine;
         }
     </style>
 </head>
